--- a/index.html
+++ b/index.html
@@ -5,13 +5,39 @@
             <link rel="stylesheet" href="style.css">
       </head>
 
+      <div class="cards">
+      <div class="smile">
+            Please Smile Like This my Jaan!🥺🥺
+            You Look so cute when u smile and i want to see you smile like this always.
+            Please Forgive me!
+
+            <br>
+
+            1 baar aise hi hasdo meri bubbu pljjjjj🥺.
+      </div>
+</div>
+
       <body>
-            <div class="emoji"> &#128532;
+            <div class="custom">
+                  <div class="cards">
+
+                 
+            <div class="sorrytext">I m sorry Jaan!!</div>
+            <div class="second">I am Sorry <span class="name">Shivangi.</span> I know I have hurted you
+            by my words but my intention was not it,I spoke them in anger and for which i m regretting and 
+      I genuinely Sorry for it.</div>
+      <div class="love">I Love You so much!!</div>
+      </div>
+            <div class="img">
+                  <img src="./pic2.jpg" width="300px" height="300px" alt="">
+            </div>
+      </div>
+            <!-- <div class="emoji"> &#128532;
 
                   <span style="font-size: 100px;"> &#128532;</span>
                   <span style="font-size: 100px;">&#128532;</span>
                   
-            </div> 
+            </div>  -->
                   <div class="container">
                         <div class="frame">
                               <div class="envelope"></div>
@@ -34,6 +60,6 @@
                         </div>
                   </div>
             </div>
-            <div class="shadow"> </div>
+            <!-- <div class="shadow"> </div> -->
       </body>
             </html>
